<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="15dp" >

            <!-- 图片 -->

            <ImageView
                android:id="@+id/ic_game_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_gf_default_photo" />
            <!-- 时间 -->

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="2017-1-1"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/txt_size_14" />
            <!-- 图片右侧 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_time"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/ic_game_icon"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_game_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/str_my_albums"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_size_17"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_game_fans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:text="@string/str_my_albums_fans"
                    android:textColor="@color/color_282828"
                    android:textSize="@dimen/txt_size_15" />
            </LinearLayout>

            <!-- 浏览~~~ -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ic_game_icon"
                android:orientation="horizontal"
                android:paddingTop="15dp" >

                <TextView
                    android:id="@+id/tv_game_socre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_my_albums_scans"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/txt_size_15" />

                <TextView
                    android:id="@+id/tv_game_player_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/str_my_albums_rewards"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/txt_size_15" />

                <TextView
                    android:id="@+id/tv_game_comment_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_my_albums_rewards_money"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/txt_size_15" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/color_EDEDED" />
        <!-- 打赏记录~~~ -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_reward_record"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/btn_blue"
                android:padding="5dp"
                android:text="@string/str_my_albums_rewards_record"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_size_15" />
			
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
	            <TextView
	                android:id="@+id/tv_del"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_horizontal"
	                android:drawableLeft="@drawable/del_icon"
	                android:text="@string/str_del"
	                android:textColor="@color/grey700"
	                android:textSize="@dimen/txt_size_15" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
	            <TextView
	                android:id="@+id/tv_edit"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_horizontal"
	                android:drawableLeft="@drawable/edit_icon"
	                android:text="@string/str_edit"
	                android:textColor="@color/grey700"
	                android:textSize="@dimen/txt_size_15" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
                <TextView
	                android:id="@+id/tv_share"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_horizontal"
	                android:drawableLeft="@drawable/share_icon"
	                android:text="@string/str_share"
	                android:textColor="@color/grey700"
	                android:textSize="@dimen/txt_size_15" />
            </FrameLayout>
        </LinearLayout>

        <!-- 线 -->

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_bg" />
    </LinearLayout>

</FrameLayout>