<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white" >
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >
		<!-- 制作了 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/str_albums_imgs_build_label"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/txt_size_15" />

            <TextView
                android:id="@+id/albums_build_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_albums_imgs_build_value"
                android:textColor="@color/color_282828"
                android:textSize="@dimen/txt_size_15" />
        </LinearLayout>

        <!-- 线 -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_EDEDED" />

        <!-- 收到打赏 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/str_albums_imgs_reward_label"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/txt_size_15" />

            <TextView
                android:id="@+id/albums_reward_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_albums_imgs_reward_value"
                android:textColor="@color/color_282828"
                android:textSize="@dimen/txt_size_15" />
        </LinearLayout>
    </LinearLayout>

    <!-- 线 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_bg" />
</LinearLayout>