<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/comm_title_bar"/>
    <include layout="@layout/comm_line_deep"/>
    <include layout="@layout/comm_view_divider"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="15dp"
	    android:paddingBottom="15dp"
	    android:gravity="center_vertical"
	    android:orientation="horizontal"
	    android:background="@color/white">
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginLeft="10dp"
	        android:textColor="@color/color_282828"
	        android:textSize="@dimen/txt_size_15"
	        android:text="@string/str_remaind_recieve_message"/>

	    <com.bop.zz.widget.ToggleButton
	        android:id="@+id/tb_remaind_recieve_message"
	        android:layout_width="54dp"
	        android:layout_height="30dp"
	        android:layout_marginRight="10dp" />

	</LinearLayout>
	
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingTop="5dp"
	    android:paddingBottom="30dp"
	    android:textColor="@color/color_666666"
	    android:textSize="@dimen/txt_size_13"
	    android:text="@string/str_remaind_recieve_message_tip"
	    android:background="@color/color_EDEDED"/>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    android:paddingTop="15dp"
	    android:paddingBottom="15dp"
	    android:orientation="horizontal"
	    android:background="@color/white">
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginLeft="10dp"
	        android:textColor="@color/color_282828"
	        android:textSize="@dimen/txt_size_15"
	        android:text="@string/str_remaind_voice"/>
	    
	    <com.bop.zz.widget.ToggleButton
	        android:id="@+id/fingerprint_recognition_tb"
	        android:layout_width="54dp"
	        android:layout_height="30dp"
	        android:layout_marginRight="10dp" />
	</LinearLayout>
	<include layout="@layout/comm_line_deep"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="8dp"
	    android:layout_marginRight="8dp"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    android:paddingTop="15dp"
	    android:paddingBottom="15dp"
	    android:orientation="horizontal"
	    android:background="@color/white">
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginLeft="10dp"
	        android:textColor="@color/color_282828"
	        android:textSize="@dimen/txt_size_15"
	        android:text="@string/str_remaind_shack"/>
	    <com.bop.zz.widget.ToggleButton
	        android:id="@+id/fingerprint_recognition_tb"
	        android:layout_width="54dp"
	        android:layout_height="30dp"
	        android:layout_marginRight="10dp" />
	</LinearLayout>
	<include layout="@layout/comm_line_deep"/>
	<FrameLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/color_EDEDED">
	    <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:paddingTop="5dp"
		    android:textColor="@color/color_666666"
		    android:textSize="@dimen/txt_size_13"
		    android:text="@string/str_remaind_voice_shack_tip"
		    android:background="@color/color_EDEDED"/>
	</FrameLayout>
</LinearLayout>
